# training-env

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
data_project/: __init__.py  helpers.py  main.py
data_project/data/: bitcoin-08-05-2024.json
data_project/helpers/: helpers.py
tests/: test_hello.py  test_version.py
